# csv-median-calculator

./: CMakeLists.txt  README.md
examples/input/: ancient_level.csv  ancient_trade.csv
examples/output/: median_result.csv
include/: config.hpp  csv_reader.hpp  file_scanner.hpp  median_calculator.hpp  record_loader.hpp  result_writer.hpp  types.hpp
src/: config.cpp  csv_reader.cpp  file_scanner.cpp  main.cpp  median_calculator.cpp  record_loader.cpp  result_writer.cpp
